Final QA Changes
Finished off the last of the QA changes. Ready for client training.

--- a/scss/_cmsdesk.scss
+++ b/scss/_cmsdesk.scss
@@ -7,3 +7,12 @@
 .EditMode header .utility-wrapper {
 	height: 120px;
 }
+
+.EditableImageEdit .ImageSelectorHeader, 
+.EditButtons {
+	z-index: 2000;
+}
+
+.EditMode header {
+	position: static;
+}
