--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'contact';
 @import 'success';
 @import 'news';
+@import 'press';
 @import 'search';
 @import 'widgets';
 @import 'cmsdesk';
