--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -182,6 +182,10 @@ footer {
 		font-size: 15px;
 		margin-bottom: 5px;
 		border-bottom: 2px solid $green;
+		margin-top: 35px;
+		@include breakpoint(small) {
+			margin-top: 0;
+		}
 	}
 	ul {
 		list-style: none;
@@ -196,19 +200,21 @@ footer {
 
 // Press Releases
 
-.pressReleaseItem {
-	border-bottom: 1px solid #686868;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	a {
-		color: #fff;
-		&:hover {
-			color: $green;
+#footer-wrapper {
+	.pressReleaseItem {
+		border-bottom: 1px solid #686868;
+		padding-bottom: 10px;
+		margin-bottom: 10px;
+		a {
+			color: #fff;
+			&:hover {
+				color: $green;
+			}
 		}
-	}
-	.date {
-		font-size: 10px;
-		font-weight: 200;
+		.date {
+			font-size: 10px;
+			font-weight: 200;
+		}
 	}
 }
 
@@ -220,7 +226,7 @@ a.useful-link {
 	color: #fff;
 	display: block;
 	margin: 5px 0;
-	padding: 10px 0;
+	padding: 10px 20px 10px 0px;
 	position: relative;
 	&:hover {
 		color: $green;
@@ -230,6 +236,7 @@ a.useful-link {
 		font-family: 'FontAwesome';
 		position: absolute;
 		right: 0;
+		top: 22%;
 	}
 }
 
@@ -239,9 +246,10 @@ a.useful-link {
 #footer-wrapper .Office {
 	font-weight: 200;
 	h2 {
-		font-size: 12px;
-		font-weight: 700;
+		font-size: 13px;
+		font-weight: bold;
 		margin-bottom: 5px;
+		font-family: arial;
 	}
 	a {
 		color: #fff;
@@ -258,6 +266,9 @@ a.useful-link {
 	cursor: pointer;
 	font-weight: 700;
 	text-align: right;
+	&:hover {
+		color: $blue;
+	}
 }
 
 
@@ -267,7 +278,10 @@ a.useful-link {
 	align-items: center;
 	background: #000;
 	color: #fff;
-	display: flex;
+	display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
 	font-family:'Helvetica W01';
 	font-size: 15px;
 	height: 90px;
