Minor changes to form input

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -124,3 +124,11 @@
 		@include button(#fff,$black,$green,5px);
 	}
 }
+
+input[type="text"]{
+  min-width: 40px;
+}
+
+input[type="text"]{
+  min-width: 40px;
+}
